--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,6 +1,4 @@
 .nav-warraper {
-    display: flex;
-    align-items: center;
     min-height: 54px;
     margin-bottom: 30px;
     padding: 0 16px;
@@ -8,8 +6,28 @@
     color: #fff;
 }
 
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 .logo-container {
     flex: 1;
+    font-size: 20px;
+    line-height: 53px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.chart-icon {
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    margin-right: 8px;
+    margin-bottom: -3px;
 }
 
 .nav-content {
@@ -47,6 +65,7 @@
     top: 52px;
     left: 12px;
     width: 172px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
 }
 
@@ -84,9 +103,14 @@
     -webkit-transition: border-color 0.25s, color 0.25s;
     transition: border-color 0.25s, color 0.25s;
     margin-left: 8px;
+    -moz-transition: all 0.25s linear;
+    -webkit-transition: all 0.25s linear;
+    transition: all 0.25s linear;
 }
 
 .caret-animations {
+    -moz-transition: rotate(180deg);
+    -webkit-transition: rotate(180deg);
     transform: rotate(180deg);
 }
 
@@ -112,14 +136,7 @@
     color: #fafafa;
 }
 
-
-@keyframes caret-animations {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    25%  {transform: rotate(30deg);}
-    50%  {transform: rotate(60deg);}
-    75%  {transform: rotate(120deg);}
-    100% {transform: rotate(180deg);}
+#size-array {
+    margin-left: 8px;
+    cursor: pointer;
 }
