--- a/src/components/SortingVisualier.css
+++ b/src/components/SortingVisualier.css
@@ -24,7 +24,17 @@
 }
 
 .bar {
-    width: 28px;
-    background-color: rgb(0, 183, 255);
+    /* width: 28px; */
     transition: 0.2s all ease;
+}
+
+.bar > span {
+    font-size: 12px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+    color: #000;
+    padding-top: 4px;
 }
